Fixed locations page layout to no longer have big gaps on mobile

--- a/public/wp-content/themes/zenleaf-custom-theme/assets/css/styles.css
+++ b/public/wp-content/themes/zenleaf-custom-theme/assets/css/styles.css
@@ -5276,6 +5276,16 @@ section .opening a:hover {
   text-decoration:none;
 }
 
+@media only screen and (max-width: 800px){
+  .card.no-mobile {
+    display: none;
+  }
+
+  .card {
+    height: 450px;
+  }
+}
+
 /*@import "./components/faq.css"; */
 
 .ctaPrimary {
@@ -6132,6 +6142,16 @@ element.style {
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+@media only screen and (max-width: 800px){
+  .card.no-mobile {
+    display: none;
+  }
+
+  .card {
+    height: 450px;
+  }
+}
+
 @media (min-width: 768px) {
   .sm\:block {
     display: block;
@@ -6291,4 +6311,4 @@ element.style {
 }
 
 @media (min-width: 1536px) {
-}
+} 
