--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -447,3 +447,15 @@ element.style {
 .hover:text-white {
 	@apply hover:text-white;
 }
+
+
+
+
+@media only screen and (max-width: 800px){
+    .card.no-mobile {
+        display: none;
+    }
+    .card {
+        height: 450px;
+    }
+} 
